<resources>
    <string name="app_name">3D Printing Price Calculator</string>

    <string name="google_maps_key">AIzaSyBY3c7RFvwzs06juEg0nzIU7PVERTIV3U8</string>
    <!-- Material Model -->
    <string name="button_addMaterial">Add Material</string>
    <string name="button_saveMaterial">Save Material</string>
    <string name="hint_materialName">Material Name</string>
    <string name="hint_materialType">Material Type</string>
    <string name="hint_materialWeight">Material Weight</string>
    <string name="hint_materialPrice">Material Price</string>

    <string name="title_activity_Material_list">MaterialListActivity</string>

    <!-- Printer Model -->
    <string name="button_addPrinter">Add Printer</string>
    <string name="button_savePrinter">Save Printer</string>
    <string name="hint_printerName">Printer Name</string>
    <string name="hint_printerPrice">Printer Price</string>
    <string name="hint_printWatts">Printer Watt Usage</string>
    <string name="hint_printerInvestReturn">Printer Return On Investment In Months</string>

    <string name="title_activity_Printer_list">PrinterListActivity</string>

    <!-- User Model -->
    <string name="button_addUser">Add User</string>
    <string name="button_saveUser">Save User</string>
    <string name="hint_userName">User Name</string>
    <string name="hint_labourCost">Cost Of Your Work Per Hour</string>
    <string name="hint_energyCost">Cost for 1 Watt Hour</string>
    <string name="hint_curreny">Your Preferred Currency</string>

    <string name="title_activity_User_list">UserListActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Material Activity -->
    <string name="menu_addMaterial">Add</string>
    <string name="menu_cancelMaterial">Cancel</string>
    <string name="menu_deleteMaterial">Delete</string>

    <string name="no_title">Name and Description Required</string>

    <string name="button_addImage"> Add Image </string>
    <string name="button_changeImage"> Change Image </string>


    <string name="select_material_image">Select material image</string>

    <!-- Task Screen -->
    <string name="button_location">Set Location</string>
    <string name="button_task">Tasks</string>
    <string name="button_addTask">Add Task</string>
    <string name="button_saveTask">Save Task</string>
    <string name="title_activity_map">Map</string>

    <string name="hint_customerName">Customer Name</string>
    <string name="hint_description">Description</string>
    <string name="hint_address">Address</string>
    <string name="hint_taskCost">Task Cost</string>
    <string name="hint_shipping">Shipping Cost</string>>
    <string name="button_test">Test</string>


    <!-- Main Screen -->

    <string name="title_activity_main">MainActivity</string>

    <string name="button_materialMenu">Materials</string>
    <string name="button_printerMenu">Printers</string>
    <string name="button_userMenu">User Settings</string>
    <string name="button_calculation">Calculate</string>

    <!-- Calculation Activity -->
    <string name="hint_modelWeight">Model Weight</string>
    <string name="hint_hours">Hours</string>
    <string name="hint_minutes">Minutes</string>

    <string name="text_MatCost">Total Material Cost: </string>
    <string name="text_EnergyCost">Total Energy Cost: </string>
    <string name="text_PrinterCost">Total Printer Cost: </string>
    <string name="text_TotalCost">Total Printing Cost: </string>

    <string name="spinner_User">Choose a User Profile</string>
    <string name="spinner_Material">Choose a Material Profile</string>
    <string name="spinner_Printer">Choose a Printer Profile</string>

</resources>