<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CalculationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimary" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:text="@string/spinner_User" />
                <Spinner
                    android:id="@+id/userSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:hint="@string/hint_modelWeight"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:text="@string/spinner_Material" />
                <Spinner
                    android:id="@+id/materialSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:text="@string/spinner_Printer" />
                <Spinner
                    android:id="@+id/printerSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center" />



                <EditText
                    android:id="@+id/modelWeight"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="8dp"
                    android:autofillHints="hint"
                    android:hint="@string/hint_modelWeight"
                    android:inputType="number"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/timeHours"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="8dp"
                    android:autofillHints="hint"
                    android:hint="@string/hint_hours"
                    android:inputType="number"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/timeMinutes"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="8dp"
                    android:autofillHints="hint"
                    android:hint="@string/hint_minutes"
                    android:inputType="number"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />

                <!-- Total Material Cost -->
                <TextView
                    android:id="@+id/MatCostText"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:text="@string/text_MatCost" />

                <!-- Total Energy Cost -->
                <TextView
                    android:id="@+id/EnergyCostText"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:text="@string/text_EnergyCost" />
                <!-- Total Printer Cost -->
                <TextView
                    android:id="@+id/PrinterCostText"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:text="@string/text_PrinterCost" />
                <!-- Total Overall Printing Cost -->
                <TextView
                    android:id="@+id/TotalCostText"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:text="@string/text_TotalCost" />

                <Button
                    android:id="@+id/btnCalculate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/colorAccent"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/button_calculation"
                    android:textColor="#212121"
                    android:textSize="16sp" />

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>